# Orainvoice

./: .dockerignore  .env.example  .env.ha-standby  .env.pi  .env.pi-standby  .env.standby-prod  .gitattributes  .gitignore  ABCD_DATABASE_STORAGE.md  ABCD_RETRY_LOGIC.md  ACCOUNTING_INTEGRATIONS_FIX.md  ARCHITECTURE.md  CAPTCHA_IMPLEMENTATION.md  CAPTCHA_VERIFICATION_FIX.md  CAPTCHA_VERIFY_BUTTON.md  CARJAM_ABCD_IMPLEMENTATION.md  CHANGELOG.md  DASHBOARD_API_FIX.md  DEV_CREDENTIALS.md  DEV_ENVIRONMENT_STATUS.md  DOCKER_README.md  DOCKER_SETUP.md  Dockerfile  HARD_DELETE_UI_IMPLEMENTATION.md  LOOKUP_TYPE_TRACKING.md  Makefile  NESTED_PROPERTY_SAFETY_FIXES.md  ORGANIZATION_MANAGEMENT.md  ORG_USER_DASHBOARD_FIXES.md  OraFlows_Accounting_Build_Plan.md  OraInvoice_Developer_Audit_Report.md  OraInvoice_Feature_Gap_Analysis.md  OraInvoice_Post_Fix_Security_Audit_Report.md  Plan 2.md  Plan.md  QUICKSTART.md  RACE_CONDITION_FIXES.md  RATE_LIMIT_DEVELOPMENT_FIX.md  RATE_LIMIT_DISABLED.md  RATE_LIMIT_FIX.md  (+30 more)
.claude/: .fuse_hidden00000d580000000c  settings.local.json
OraInvoice_Handoff/: IMPLEMENTATION_CHECKLIST.md  KIRO_AGENT_PROMPT.md  MOBILE_HANDOFF.md  MOBILE_IMPLEMENTATION_CHECKLIST.md  OraInvoice Mobile (standalone).html  OraInvoice Mobile Redesign.html  OraInvoice Redesign (shell + dashboard).html  README.md
alembic/: env.py
app/: __init__.py  config.py  main.py
docs/: API_RESPONSE_SAFETY_AUDIT.md  API_RESPONSE_SAFETY_MITIGATION_PLAN.md  COF_SUPPORT_GAP_ANALYSIS.md  CUSTOMER_PORTAL_ARCHITECTURE_REVIEW.md  CUSTOMER_PORTAL_AUDIT.md  DATABASE_TABLES.md  DEPENDENCY_AUDIT_2026_05.md  DEPENDENCY_UPGRADE_PLAN.md  EMAIL_TYPES_CATALOG.md  FRONTEND_INVENTORY.md  GREY_BOX_PENTEST_REPORT.md  HA_REPLICATION_GAPS.md  HA_REPLICATION_GUIDE.md  HA_REPLICATION_REVIEW_2.md  HA_REPLICATION_REVIEW_3.md  ISSUE_TRACKER.md  OWASP_TOP_10_SECURITY_AUDIT.md  PERFORMANCE_AUDIT.md  PROD_ERROR_WEBHOOK_PLAN.md  PROJECT_MANAGEMENT_IMPLEMENTATION_PLAN.md  PYTHON_DEPENDENCY_AUDIT.md  QUOTE_PREVIEW_PRINT_PLAN.md  REDESIGN_AUDIT.md  REDESIGN_TRACKER.md  REPORTS_AUDIT.md  SCHEDULED_TASKS.md  SECURITY_REMEDIATION_PLAN.md  SEO_IMPLEMENTATION.md  STRIPE_IMPLEMENTATION.md  (+20 more)
(+4622 files in other folders)
