[project]
name = "workshoppro-nz"
version = "0.1.0"
description = "WorkshopPro NZ — Multi-tenant SaaS platform for NZ workshops"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "redis>=5.0.0",

    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "weasyprint>=62.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "alembic>=1.13.0",
    "webauthn>=2.0.0",
    "pyotp>=2.9.0",
    "stripe>=7.0.0",
    "pillow>=10.0.0",
    "python-dateutil>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
