[project]
name = "workshoppro-nz"
version = "1.1.0"
description = "WorkshopPro NZ — Multi-tenant SaaS platform for NZ workshops"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "gunicorn>=22.0.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.30.0",
    "redis>=7.4.0",
    "cryptography>=46.0.7",
    "certifi>=2026.2.25",

    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "PyJWT[crypto]>=2.12.1",
    "bcrypt>=4.0.0",
    "weasyprint>=62.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.1.0",
    "alembic>=1.18.4",
    "webauthn>=2.7.1",
    "pyotp>=2.9.0",
    "stripe>=15.0.1",
    "twilio>=9.10.4",
    "pillow>=12.2.0",
    "python-dateutil>=2.8.0",
    "reportlab>=4.4.10",
    "requests>=2.33.1",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.151.12",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "fakeredis>=2.35.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
